# qt_linux

./: .gitignore  README.md  evkuz.h  hiwonder.cpp  hiwonder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mystart.pro  positions.h
SimpleServer/: SimpleServer.pro  main.cpp  qsimpleserver.cpp  qsimpleserver.h
agents_python/: requirements.txt
arduino/: Learm_Workflow.txt  learm_04.ino  move_servos.cpp  move_servos.ino
device_py/: __init__.py  action.py  config.py  device.py  history.py  service.py  status.py  views.py
docs/: Demonstration_v2.md  Device_communication_protocol_V1.0.md  Device_communication_protocol_V1.1.md  Prepear agents_python venv.md
embed/: 2110_points.xls  SocketClient.h  embed.pro  evkuz.h  hiwonder.cpp  hiwonder.h  main.cpp  mainprocess.cpp  mainprocess.h  mcinfer.h  neuron.cpp  neuron.h  positions.h  protocol.h  qsimpleserver.cpp  qsimpleserver.h  qsocketthread.cpp  qsocketthread.h
hiwonder/: cpqtlibs.bash  renamelib.bash  renamelocal.bash
hiwonder_py/: Positions.txt  developing_journal.txt  form.ui  main.py
hiwonder_qt/: evkuz.h  hiwonder.cpp  hiwonder.h  mainwindow.cpp  (+5 more)
simpledetector_cpp/: CMakeLists.txt  README.md  SocketServer.cpp  SocketServer.h  build.sh  run.sh  simpledetector.cpp
simpledetector_cpp/src/: CMakeLists.txt  SocketServer.cpp  arg_parser.h  simpledetector.cpp
simpledetector_cpp/src/httpserver/: Makefile  http_content_type.h  http_headers.h  http_request.h  http_server.cpp  http_server.h  main.cpp  static_counter.h  string_constant.h
simpledetector_cpp/test_client/: SocketClient.cpp  run.sh  test_client.cpp
(+794 files in other folders)
